# parsimony

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pricing.yaml  pyproject.toml
.github/workflows/: ci.yml
src/parsimony/: __init__.py  __main__.py  budget.py  cli.py  config.py
src/parsimony/aggregator/: __init__.py  diff.py  filters.py  grouper.py  rollup.py  time_range.py  trends.py
src/parsimony/cache/: __init__.py  store.py
src/parsimony/dashboard/: __init__.py  app.py  watcher.py  widgets.py
src/parsimony/models/: __init__.py  cost.py  session.py  tool_usage.py
src/parsimony/output/: __init__.py  charts.py  diff_table.py  display_config.py  export.py  formatters.py  gauges.py  tables.py
src/parsimony/parser/: __init__.py  events.py  reader.py  scanner.py  session_builder.py
tests/: test_budget.py  test_cli.py  test_config.py
tests/aggregator/: test_diff.py  test_filters.py  test_grouper.py  test_rollup.py  test_time_range.py  test_trends.py
tests/cache/: test_store.py
tests/dashboard/: test_app.py  test_watcher.py  test_widgets.py
tests/fixtures/: malformed_session.jsonl  mcp_session.jsonl  multi_model_session.jsonl  simple_session.jsonl  subagent_session.jsonl
tests/models/: test_cost.py  test_session.py  test_tool_usage.py
tests/output/: test_charts.py  test_export.py  test_formatters.py  test_gauges.py  test_tables.py
tests/parser/: test_events.py  test_reader.py  test_scanner.py  test_session_builder.py
