[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsimony-cli"
version = "0.3.0"
description = "Know where your Claude Code tokens go - usage tracking for subscribers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Mina Saad"}]
keywords = ["claude", "claude-code", "tokens", "usage", "observability", "cli", "subscription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://pypi.org/project/parsimony-cli/"
Repository = "https://github.com/MinaSaad1/parsimony"
Issues = "https://github.com/MinaSaad1/parsimony/issues"
Changelog = "https://github.com/MinaSaad1/parsimony/releases"

[project.scripts]
parsimony = "parsimony.cli:main"

[project.optional-dependencies]
dashboard = [
    "textual>=0.50",
    "watchfiles>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parsimony"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=parsimony --cov-report=term-missing"

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["textual.*", "watchfiles.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["parsimony.dashboard.*"]
disallow_subclassing_any = false
warn_unused_ignores = false

[tool.coverage.run]
source = ["parsimony"]

[tool.coverage.report]
fail_under = 80
show_missing = true
